--- a/server_project/pom.xml
+++ b/server_project/pom.xml
@@ -37,6 +37,12 @@
             <version>0.9.5.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.19.1</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
